--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from '../components/Hero.astro';
 import About from '../components/About.astro';
 import Events from '../components/Events.astro';
 import CallForPapers from '../components/CallForPapers.astro';
+import Partners from '../components/Partners.astro';
 import Organizers from '../components/Organizers.astro';
 import Footer from '../components/Footer.astro';
 
@@ -18,6 +19,7 @@ const lang = 'pl';
     <About lang={lang} />
     <Events lang={lang} />
     <CallForPapers lang={lang} />
+    <Partners lang={lang} />
     <Organizers lang={lang} />
   </main>
   <Footer lang={lang} />
